--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
+    "axios": "^1.7.5",
     "pinia": "^2.2.2",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
