--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.7.5",
     "pinia": "^2.2.2",
     "vue": "^3.4.29",
+    "vue-i18n": "^9.14.0",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
