--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "pinia": "^2.2.2",
     "vue": "^3.4.29",
     "vue-i18n": "^9.14.0",
+    "vue-recaptcha": "^3.0.0-alpha.6",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
